data/forge_javadoc/1.8.9/raw/net/minecraft/entity/monster/EntityCaveSpider.md
---
title: "EntityCaveSpider"
description: "public class EntityCaveSpider extends EntitySpider"
package: "net/minecraft/entity/monster"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/entity/monster/EntityCaveSpider.html"
sourceType: javadoc
---

# EntityCaveSpider

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntitySpider → net.minecraft.entity.monster.EntityCaveSpider

## Class signature

```java
public class EntityCaveSpider extends EntitySpider
```

## Methods

- `protected void applyEntityAttributes()`
- `boolean attackEntityAsMob(Entity entityIn)`
- `float getEyeHeight()`
- `IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)` — Called only once on an entity when first time spawned, via egg, mob spawner, natural spawning etc, but not called when entity is reloaded from nbt.

## Fields

- `EntityCaveSpider`
