data/forge_javadoc/1.10.2/raw/net/minecraft/entity/monster/EntityCaveSpider.md
---
title: "EntityCaveSpider"
description: "public class EntityCaveSpider extends EntitySpider"
package: "net/minecraft/entity/monster"
version: "1.10.2"
forgeBuild: "12.18.3.2185"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.10.2-12.18.3.2185/net/minecraft/entity/monster/EntityCaveSpider.html"
sourceType: javadoc
---

# EntityCaveSpider

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityMob → net.minecraft.entity.monster.EntitySpider → net.minecraft.entity.monster.EntityCaveSpider

## Class signature

```java
public class EntityCaveSpider extends EntitySpider
```

## Methods

- `protected void applyEntityAttributes()`
- `boolean attackEntityAsMob(Entity entityIn)`
- `float getEyeHeight()`
- `protected ResourceLocation getLootTable()`
- `IEntityLivingData onInitialSpawn(DifficultyInstance difficulty, IEntityLivingData livingdata)`
- `static void registerFixesCaveSpider(DataFixer fixer)`

## Fields

- `EntityCaveSpider`
